feat: Added map

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     </div>
                                     <div class="profile__info profile__spaces">
                                         <h1 class="profile__info--name ">Шогенов Асланбек Владимирович</h1>
-                                        <span class="profile__info--desc">Директор</span>
+                                        <span class="profile__info--desc">Руководитель проекта</span>
                                         <div class="profile__buttons">
                                             <div class="profile__qrcode">
                                                 <a 
@@ -209,6 +209,15 @@
                             </div>
                         </section>
 
+                        <section id="25" data-block-type="78">
+                            <article data-block-content="" class="maps">
+                                <div class="maps__wrapper block__space">
+                                    <div style="padding-top:56.25%;position:relative;">
+                                        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A2148cd529bb830803244fb5fd590f10753ac53755860cbb3dc77e5801fdf6019&amp;source=constructor" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" width="100%" data-aspect-ratio="16:9" title="Map"></iframe>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
                             
                         <section id="15" data-block-type="71">
                             <div data-block-content="" class="spacer">
